error.log
C:\Users\craig\OneDrive\Desktop\SKR\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
config.ts(2,25): error TS2307: Cannot find module 'dotenv' or its corresponding type declarations.
config.ts(4,18): error TS7016: Could not find a declaration file for module 'bs58'. 'C:/Users/craig/OneDrive/Desktop/SKR/node_modules/bs58/index.js' implicitly has an 'any' type.
  Try `npm i --save-dev @types/bs58` if it exists or add a new declaration (.d.ts) file containing `declare module 'bs58';`

    at createTSError (C:\Users\craig\OneDrive\Desktop\SKR\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\craig\OneDrive\Desktop\SKR\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\craig\OneDrive\Desktop\SKR\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\craig\OneDrive\Desktop\SKR\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\craig\OneDrive\Desktop\SKR\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\craig\OneDrive\Desktop\SKR\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2307, 7016 ]
}
